# scanipy-oss

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: cli-ux.md  code-reviewer.md  detector-author.md  docs-writer.md  qa-test.md  release-eng.md  taint-engine.md
.claude/commands/: new-detector.md  release.md  scan-self.md
.claude/rules/: detector-quality.md  principles.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detector_request.yml  feature_request.yml
.github/workflows/: ci.yml  enforce-pr-only-merges.yml  release.yml
docs/: dsl-reference.md  engine-reference.md  ir-reference.md  release-readiness.md  testing.md  usage.md  writing-detectors.md
docs/design/: v1-design-notes.md
docs/examples/: end-to-end.md
scripts/: no-push-to-main.sh
src/scanipy/: __init__.py  __main__.py  cli.py  config.py  discovery.py  exit_codes.py  ir.py  models.py  registry.py  scanner.py
src/scanipy/detectors/: __init__.py
src/scanipy/detectors/deserialization/: unsafe-deserialization.yml
src/scanipy/detectors/injection/: code-injection.yml  os-command.yml  sql.yml
src/scanipy/detectors/ssrf/: ssrf.yml
src/scanipy/detectors/traversal/: path-traversal.yml
src/scanipy/detectors/xxe/: xxe.yml
src/scanipy/dsl/: __init__.py  parser.py  patterns.py  spec.py
src/scanipy/engine/: __init__.py  matcher.py  propagation.py  summaries.py  taint.py  taint_state.py  witness.py
src/scanipy/frontends/: __init__.py  base.py  python_frontend.py  resolver.py
src/scanipy/reporting/: __init__.py  base.py  json_reporter.py  sarif.py  text.py
tests/: conftest.py
tests/_support/: __init__.py  corpus.py  normalize.py
tests/docs/: test_catalog_bijection.py  test_end_to_end_example.py  test_version_changelog.py
tests/fixtures/dsl/invalid/: args-empty.yml  args-negative.yml  args-non-int.yml  args-on-attribute.yml  bad-cwe.yml  bad-dotted-pattern.yml  bad-flow-token.yml  bad-severity.yml  bool-severity.yml  duplicate-key.yml  empty-sinks.yml  empty-sources.yml  invalid-yaml.yml  missing-id.yml  non-mapping-root.yml  propagator-missing-flow.yml  propagator-non-call.yml  unknown-pattern-field.yml  unknown-pattern-kind.yml  unknown-top-level-key.yml  unsupported-language.yml  when-non-scalar-value.yml  when-on-attribute.yml  when-unknown-condition.yml
tests/fixtures/dsl/valid/: full.yml  import-kind.yml  minimal.yml  parameter-kind.yml
tests/fixtures/python/ir/: import_styles.py  syntax_error.py
tests/fixtures/python/safe/: code-injection.py  interproc-path-traversal.py  os-command.py  path-traversal.py  sql.py  ssrf.py  unsafe-deserialization.py  xxe.py
tests/fixtures/python/vulnerable/: code-injection.py  interproc-os-command.py  os-command.py  path-traversal.py  sql.py  ssrf.py  unsafe-deserialization.py  xxe.py
tests/golden/: scan-corpus.json  scan-corpus.sarif.json
tests/integration/: test_cli.py  test_detectors.py  test_determinism.py  test_engine_end_to_end.py  test_golden_reports.py  test_hermeticity.py  test_performance_smoke.py  test_resilience.py
tests/unit/: test_cli.py  test_config.py  test_core.py  test_discovery.py  test_dsl_parser.py  test_engine_determinism.py  test_engine_intraprocedural.py  test_engine_matching.py  test_engine_propagation.py  test_frontend_cfg.py  test_frontend_ir.py  test_matcher.py  test_qa_coverage_fill.py  test_registry.py  test_scanner.py  test_summaries.py  test_taint_state.py
